# secrets_manager

./: Cargo.toml  README.md
src/: aws_client.rs  aws_client_builder.rs  client.rs  errors.rs  fake_client.rs  lib.rs
