[package]
name = "secrets-manager"
version = "0.0.1"
edition = "2024"

[features]
mocks = ["dep:mockall"]

[dependencies]
async-trait = { version = "0.1.88" }
tracing = { version = "0.1.41" }
aws-config = { version = "1.6.2" }
aws-sdk-secretsmanager = { version = "1.69.0" }
serde_json = { version = "1.0.140" }
thiserror = { version = "2.0.12" }

# Used only with feature mock
mockall = { version = "0.13.1", optional = true }

[dev-dependencies]
mockall = { version = "0.13.1" }
tokio = {  version = "1.45.0", features = ["macros"] }
